--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,40 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  padding: 0 10px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+hr {
+  border: none;
+  border-top: 1px solid #ccc;
+}
+
+.nav {
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  padding: 0;
+}
+
+.nav > li {
+  list-style-type: none;
+}
+
+.nav > li > a{
+  display: block;
+  padding: 5px 10px;
+  color: blueviolet;
+  text-decoration: none;
+}
+
+.nav > li > a:hover,
+.nav > li > a:focus {
+  background-color: blueviolet;
+  color: whitesmoke;
+}
