--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,25 @@ hr {
   background-color: blueviolet;
   color: white;
 }
+
+* { box-sizing: border-box }
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.col-4 {
+  min-width: calc( 4 * 100% / 12 );
+  padding-left: 15px;
+  padding-right: 15px;
+  
+}
+
+.col-8 {
+  min-width: calc( 8 * 100% / 12 );
+  padding-left: 15px;
+  padding-right: 15px;
+}
